--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -7,6 +7,10 @@
     <title>To-Do Lists</title>
 </head>
 <body>
-    <p>Hello World!</p>
+    <h1>Your To-Do List</h1>
+    <input id="id_new_item" placeholder="Enter a to-do item" />
+    <table id="id_list_table">
+        
+    </table>
 </body>
 </html>
